crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__shape_numeric_op.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `shape < 'callable'`: expected number expression, got `callable`",
  "input": "shape < 'callable'"
}
