crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__size_unique.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "expr": {
          "expr": {
            "domain": {
              "type": "out_refs"
            },
            "path": [
              "target"
            ],
            "type": "projection"
          },
          "type": "unique"
        },
        "type": "size"
      },
      "type": "number"
    },
    "op": "ge",
    "raw": "size(unique(out_refs.target)) >= 3",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 3.0
      },
      "type": "number"
    },
    "type": "atom"
  }
}
