crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__source_target_parent.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "source.parent",
      "type": "attr"
    },
    "op": "eq",
    "raw": "source.parent = target.parent",
    "rhs": {
      "name": "target.parent",
      "type": "projection"
    },
    "type": "atom"
  }
}
